JSON Server implementado

--- a/Login e Cadastro/cadastro.html
+++ b/Login e Cadastro/cadastro.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro · Lottus</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="Assets/logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -34,10 +35,11 @@
                 <p>Confirme sua senha</p>
                 <input id="input-senha-confirm" type="password" required>
             </div>
-            <button type="submit">Cadastrar</button>
+            <button id="btn-submit" type="submit">Cadastrar</button>
         </form>
         <small>Já possui uma conta? <a href="./login.html">Entrar</a></small>
 
+        <script src="cadastro.js"></script>
 </body>
 
 </html>
